@@ -1,15 +1,16 @@
 import javax.management.RuntimeErrorException;
 import javax.management.RuntimeOperationsException;
 import javax.print.attribute.standard.PrinterMessageFromOperator;
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStreamReader;
+import java.io.*;
+import java.nio.ByteBuffer;
+import java.nio.channels.ByteChannel;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 import java.util.*;
 import java.util.concurrent.ExecutionException;
 import java.util.stream.Stream;
+
+import static java.nio.file.StandardOpenOption.CREATE;
 
 public class FileProcessor {
     static String[] path_environment_directories = System.getenv("PATH").split(File.pathSeparator);
@@ -83,13 +84,26 @@ public class FileProcessor {
         }
     }
 
-    private static void stdout(Process process, Path output_path, Optional<String> string_output) throws IOException, InterruptedException {
+    private static void stdout(Process process, Path output_path, Optional<String> string_output, boolean is_append) throws IOException, InterruptedException {
+        ByteArrayOutputStream to_write = new ByteArrayOutputStream();
+        to_write.write("".getBytes());
+
+
+        if (is_append && Files.exists(output_path)){
+            to_write.write(Files.readAllBytes(output_path));
+            if (!to_write.toString().endsWith("\n")){
+                to_write.write("\n".getBytes());
+            }
+        }
+
         if (string_output.isPresent()){
-            Files.writeString(output_path, string_output.get());
+            to_write.write(string_output.get().getBytes());
+            Files.write(output_path,to_write.toByteArray());
             return;
         }
 
-        Files.write(output_path, process.getInputStream().readAllBytes());
+        to_write.write(process.getInputStream().readAllBytes());
+        Files.write(output_path,to_write.toByteArray());
         int exit_value = process.waitFor();
         if (exit_value != 0){
             String error = new String(process.getErrorStream().readAllBytes());
@@ -98,9 +112,10 @@ public class FileProcessor {
             }
             throw new IllegalThreadStateException(error.strip());
         }
+
     }
 
-    public static void redirect_stdout(String command,String[] parameter_array) throws IOException, IllegalThreadStateException, InterruptedException {
+    public static void redirect_stdout(String command,String[] parameter_array, boolean is_append) throws IOException, IllegalThreadStateException, InterruptedException {
         if (parameter_array == null){
             throw new NullPointerException();
         }
@@ -112,7 +127,7 @@ public class FileProcessor {
         String output_parameter = parameter_array[1].strip();
 
         Path output_path = Path.of(output_parameter);
-        Path output_parent = Path.of(""), output_file = output_path.getFileName();
+        Path output_parent = Main.current_directory, output_file = output_path.getFileName();
 
         if (output_path.getParent() != null){
             output_parent = output_path.getParent();
@@ -124,10 +139,11 @@ public class FileProcessor {
 
         output_path = output_parent.resolve(output_file);
 
-        if (executable_parameter.startsWith("'") && executable_parameter.endsWith("'")){
+        boolean in_qoutes = (executable_parameter.startsWith("'") && executable_parameter.endsWith("'")) || (executable_parameter.startsWith("\"") && executable_parameter.endsWith("\""));
+        if (in_qoutes){
             parameterParser.parse(executable_parameter);
             String output_string = parameterParser.getParameterString().toString();
-            stdout(null, output_path, Optional.of(output_string));
+            stdout(null, output_path, Optional.of(output_string), is_append);
             return;
         }
 
@@ -145,7 +161,7 @@ public class FileProcessor {
         }
 
         process = run_program(command, parameters);
-        stdout(process, output_path, Optional.empty());
+        stdout(process, output_path, Optional.empty(), is_append);
     }
 
     private static void stderr(Process process, Path output_path, Optional<String> string_output) throws IOException, InterruptedException {
@@ -174,7 +190,7 @@ public class FileProcessor {
         String output_parameter = parameter_array[1].strip();
 
         Path output_path = Path.of(output_parameter);
-        Path output_parent = Path.of(""), output_file = output_path.getFileName();
+        Path output_parent = Main.current_directory, output_file = output_path.getFileName();
 
         if (output_path.getParent() != null){
             output_parent = output_path.getParent();
@@ -186,7 +202,8 @@ public class FileProcessor {
 
         output_path = output_parent.resolve(output_file);
 
-        if (executable_parameter.startsWith("'") && executable_parameter.endsWith("'")){
+        boolean in_qoutes = (executable_parameter.startsWith("'") && executable_parameter.endsWith("'")) || (executable_parameter.startsWith("\"") && executable_parameter.endsWith("\""));
+        if (in_qoutes){
             parameterParser.parse(executable_parameter);
             String output_string = parameterParser.getParameterString().toString();
             stderr(null, output_path, Optional.of(output_string));
@@ -209,10 +226,12 @@ public class FileProcessor {
     public static void redirect(String command, String[] parameter_array) throws IOException, InterruptedException {
         String redirect_type = parameter_array[2];
         if (redirect_type.equals(">") || redirect_type.equals("1>")){
-            redirect_stdout(command, parameter_array);
-        }else if (redirect_type.equals(">>") || redirect_type.equals("2>")){
+            redirect_stdout(command, parameter_array, false);
+        }else if (redirect_type.equals("2>")){
             redirect_stderr(command, parameter_array);
-        }else{
+        }else if (redirect_type.equals("1>>") || redirect_type.equals(">>")){
+            redirect_stdout(command, parameter_array, true);
+        } else{
             System.out.println("Type of redirect not detected");
         }
     }
